Three of Jules's tests were failing